<package>
 <name>force_torque_sensor_calib</name>
  <version>1.2.0</version>
  <description>
    Calibrates the offsets of F/T sensors and the mass and position of the COM of gripper attached to the F/T sensor. Uses readings from an accelerometer that has been calibrated to the robot frame.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/force_torque_sensor_calib</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>

</package>
