<package>
  <name>force_torque_tools</name>
  <version>1.2.0</version>
  <description>
    Tools for gravity compensation and force-torque sensor calibration.
  </description>
  <license>BSD</license>

  <url>http://wiki.ros.org/force_torque_tools</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>force_torque_sensor_calib</run_depend>
  <run_depend>gravity_compensation</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
