<package>
 <name>gravity_compensation</name>
  <version>1.0.0</version>
  <description>
    Compensates gravity forces on the gripper of the robot so that force-torque signals are zeroed. Assumes previously calibrated accelerometer and F/T sensor.
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/gravity_compensation</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>  
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>eigen_conversions</run_depend>

</package>
